--- a/react-todolist/package.json
+++ b/react-todolist/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "lemongproject-front",
+  "name": "react-todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@fullcalendar/daygrid": "^6.0.3",
-    "@fullcalendar/google-calendar": "^6.0.3",
-    "@fullcalendar/react": "^6.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
-    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
