--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "form-data": "^4.0.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "rodal": "^2.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -31,7 +37,6 @@
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,7 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8070"
-
-
+  "proxy": "http://localhost:8081"
 }
