--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
