--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fullcalendar/daygrid": "^6.0.3",
     "@fullcalendar/google-calendar": "^6.0.3",
     "@fullcalendar/react": "^6.0.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "router": "^1.3.7",
     "web-vitals": "^2.1.4"
   },
