--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fullcalendar/google-calendar": "^6.0.3",
     "@fullcalendar/react": "^6.0.4",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.7",
+    "@mui/material-next": "^6.0.0-alpha.73",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
