--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
