3주차 병합완료

--- a/package.json
+++ b/package.json
@@ -21,18 +21,17 @@
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
-    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "rodal": "^2.0.1",
     "sass": "^1.57.1",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.6",
-    "reactstrap": "^9.1.5",
-    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,7 +46,6 @@
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -59,7 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-
-
+  }
 }
