--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "modal": "^1.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-async-hook": "^4.0.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.7.0",
-    "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "router": "^1.3.7",
     "reactstrap": "^9.1.5",
     "redux": "^4.1.2",
+    "router": "^1.3.7",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
