--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fullcalendar/daygrid": "^6.0.3",
     "@fullcalendar/google-calendar": "^6.0.3",
     "@fullcalendar/react": "^6.0.4",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "moment": "^2.29.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
@@ -24,6 +26,8 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
