--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "cdbreact": "^1.5.5",
     "form-data": "^4.0.0",
     "jquery": "^3.6.3",
     "modal": "^1.2.0",
@@ -26,10 +27,12 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-stompjs": "^0.5.3",
     "reactstrap": "^9.1.5",
     "rodal": "^2.0.1",
     "sass": "^1.57.1",
     "socket.io-client": "^4.5.4",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
