--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
