--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-stompjs": "^0.5.3",
+    "reactjs-alert": "^2.2.0",
     "reactstrap": "^9.1.5",
     "rodal": "^2.0.1",
     "sass": "^1.57.1",
