--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@fullcalendar/daygrid": "^6.0.3",
     "@fullcalendar/google-calendar": "^6.0.3",
     "@fullcalendar/react": "^6.0.4",
-    "@reduxjs/toolkit": "^1.9.2",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.7",
     "@mui/material-next": "^6.0.0-alpha.73",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,8 +26,8 @@
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-async-hook": "^4.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
     "react-confirm-alert": "^3.0.6",
@@ -39,21 +39,20 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-stompjs": "^0.5.3",
     "reactjs-alert": "^2.2.0",
     "reactstrap": "^9.1.5",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "rodal": "^2.0.1",
+    "router": "^1.3.7",
     "socket.io-client": "^4.5.4",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.6",
-    "react-spinners": "^0.13.8",
-    "reactstrap": "^9.1.5",
-    "redux": "^4.1.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
-    "router": "^1.3.7",
-    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
