--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
@@ -39,8 +40,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-stompjs": "^0.5.3",
+    "react-tabs": "^6.0.0",
     "reactjs-alert": "^2.2.0",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.1",
@@ -49,6 +52,7 @@
     "redux-thunk": "^2.4.2",
     "rodal": "^2.0.1",
     "router": "^1.3.7",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
