--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.10.3",
     "cdbreact": "^1.5.5",
     "form-data": "^4.0.0",
+    "immer": "^9.0.19",
     "jquery": "^3.6.3",
     "modal": "^1.2.0",
     "moment": "^2.29.4",
