--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "cdbreact": "^1.5.5",
+    "components": "^0.1.0",
     "form-data": "^4.0.0",
     "jquery": "^3.6.3",
     "modal": "^1.2.0",
@@ -41,6 +42,9 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-stompjs": "^0.5.3",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
+    "react-window-infinite-loader": "^1.0.8",
     "reactstrap": "^9.1.5",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
@@ -51,6 +55,7 @@
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
