--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "components": "^0.1.0",
     "form-data": "^4.0.0",
     "jquery": "^3.6.3",
+    "lib": "^4.3.3",
     "modal": "^1.2.0",
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
@@ -34,7 +35,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-intersection-observer": "^9.4.1",
+    "react-intersection-observer": "^9.4.2",
     "react-modal": "^3.16.1",
     "react-native": "^0.71.2",
     "react-query": "^3.39.3",
