--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "modal": "^1.2.0",
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
+    "nginx": "^1.0.8",
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-auto-image-slider": "^1.0.0",
@@ -57,6 +58,7 @@
     "socket.io-client": "^4.5.4",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.5",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
   },
