--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-thunk": "^2.4.2",
     "rodal": "^2.0.1",
     "router": "^1.3.7",
+    "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.4",
     "sockjs-client": "^1.6.1",
