--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "modal": "^1.2.0",
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-auto-image-slider": "^1.0.0",
@@ -48,10 +49,10 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-stompjs": "^0.5.3",
+    "react-tabs": "^6.0.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
     "react-window-infinite-loader": "^1.0.8",
-    "react-tabs": "^6.0.0",
     "reactjs-alert": "^2.2.0",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.1",
@@ -66,6 +67,7 @@
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.5",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.4.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
