--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fullcalendar/daygrid": "^6.0.3",
     "@fullcalendar/google-calendar": "^6.0.3",
     "@fullcalendar/react": "^6.0.4",
-    "@reduxjs/toolkit": "^1.9.2",
     "@mui/icons-material": "^5.11.0",
     "@mui/joy": "^5.0.0-alpha.66",
     "@mui/lab": "^5.0.0-alpha.118",
@@ -27,23 +26,25 @@
     "form-data": "^4.0.0",
     "immer": "^9.0.19",
     "jquery": "^3.6.3",
+    "js-circle-progress": "^0.2.4",
     "lib": "^4.3.3",
     "modal": "^1.2.0",
     "moment": "^2.29.4",
     "next-redux-wrapper": "^8.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-async-hook": "^4.0.0",
     "react-auto-image-slider": "^1.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.0.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.2",
     "react-modal": "^3.16.1",
+    "react-progressbar-fancy": "^1.1.4",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
