--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='../lemongfrontbuild/' react-scripts build",
+    "build": "BUILD_PATH='../lemongfrontbuild/build/build' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
